Refactor recorder architecture for UI-agnostic lifecycle